# Telescraper

./: .env  .gitignore  .secrets  README.md  classified_messages.csv  classified_messages.csv.1747408156.bak  classified_messages_genocidal.csv  classified_messages_official_speech.csv  classifier.py  gaza_damage_data.json  gaza_damage_visualizer.py  gaza_data_aggregator.py  main.py  muthanapress84_messages.csv  my_telegram_session.session  my_telegram_session.session-journal  pyproject.toml  requirements.txt  test.py
aggregator/: gaza_data_aggregator.py  gaza_geographic_data.json
classifier/: check_api.py  classifier.py
output/: gaza_city_town_counts.csv  gaza_geographic_summary.txt  gaza_governorate_counts.csv  gaza_neighborhood_counts.csv  gaza_street_counts.csv  message_geo_mapping.csv
scraper/: main.py  muthanapress84_messages.csv  my_telegram_session.session
visiualizer/: gaza_damage_visualizer.py
